@@ -163,8 +163,10 @@ endif
 $(common-objpfx)testrun.sh: $(common-objpfx)config.make \
 			    $(..)Makeconfig $(..)Makefile
 	(echo '#!/bin/sh'; \
-	 echo "GCONV_PATH='$(common-objpfx)iconvdata' \\"; \
-	 echo 'exec $(run-program-prefix) $${1+"$$@"}'; \
+	 echo 'builddir=`dirname "$$0"`'; \
+	 echo 'GCONV_PATH="$${builddir}/iconvdata" \'; \
+	 echo 'exec $(subst $(common-objdir),"$${builddir}",\
+			    $(run-program-prefix)) $${1+"$$@"}'; \
 	) > $@T
 	chmod a+x $@T
 	mv -f $@T $@
